add issues link

--- a/config/i18n/en-US.json
+++ b/config/i18n/en-US.json
@@ -5,6 +5,7 @@
     "TodoList": "Todo List",
     "WebRepo": "GitHub",
     "DataRepo": "Data",
+    "Issues": "Issues",
     "Github": "by ControlNet"
   },
   "Sidebar": {
