--- a/config/i18n/zh-CN.json
+++ b/config/i18n/zh-CN.json
@@ -5,6 +5,7 @@
     "TodoList": "待定计划",
     "WebRepo": "GitHub源码",
     "DataRepo": "数据",
+    "Issues": "反馈",
     "Github": "作者ControlNet"
   },
   "Sidebar": {
