add Israel and 11.3

--- a/config/i18n/en-US.json
+++ b/config/i18n/en-US.json
@@ -61,6 +61,7 @@
     "France": "France",
     "Italy": "Italy",
     "China": "China",
-    "Sweden": "Sweden"
+    "Sweden": "Sweden",
+    "Israel": "Israel"
   }
 }
