--- a/config/i18n/zh-CN.json
+++ b/config/i18n/zh-CN.json
@@ -61,6 +61,7 @@
     "France": "法国",
     "Italy": "意大利",
     "China": "中国",
-    "Sweden": "瑞典"
+    "Sweden": "瑞典",
+    "Israel": "以色列"
   }
 }
