update issue localization

--- a/config/i18n/en-US.json
+++ b/config/i18n/en-US.json
@@ -5,7 +5,7 @@
     "TodoList": "Todo List",
     "WebRepo": "GitHub",
     "DataRepo": "Data",
-    "Issues": "Issues",
+    "Issues": "Feedback",
     "Github": "by ControlNet"
   },
   "Sidebar": {
