add forum link for navbar

--- a/config/i18n/en-US.json
+++ b/config/i18n/en-US.json
@@ -6,6 +6,7 @@
     "WebRepo": "GitHub",
     "DataRepo": "Data",
     "Issues": "Feedback",
+    "Forum": "Forum",
     "Github": "by ControlNet"
   },
   "Sidebar": {
