--- a/config/i18n/zh-CN.json
+++ b/config/i18n/zh-CN.json
@@ -6,6 +6,7 @@
     "WebRepo": "GitHub源码",
     "DataRepo": "数据",
     "Issues": "反馈",
+    "Forum": "论坛",
     "Github": "作者ControlNet"
   },
   "Sidebar": {
