--- a/config/i18n/zh-CN.json
+++ b/config/i18n/zh-CN.json
@@ -27,7 +27,11 @@
     "Measurement": {
       "label": "指标: ",
       "winRate": "胜率",
-      "battlesSum": "游戏场次"
+      "battlesSum": "游戏场次",
+      "airFragsPerBattle": "飞机击杀/场次",
+      "airFragsPerDeath": "飞机击杀/死亡",
+      "groundFragsPerBattle": "地面击杀/场次",
+      "groundFragsPerDeath": "地面击杀/死亡"
     },
     "BrRange": {
       "label": "分房区间: "
