add blind color mode

--- a/config/i18n/en-US.json
+++ b/config/i18n/en-US.json
@@ -24,6 +24,9 @@
       "rb": "RB",
       "sb": "SB"
     },
+    "Colorblind": {
+      "label": "Colorblind Mode"
+    },
     "Measurement": {
       "label": "Measurement: ",
       "winRate": "Win Rate",
